# baudpunk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  sdkconfig.defaults  sdkconfig.defaults.bak
components/modem/: CMakeLists.txt  modem.c  modem.h
components/tinyusb/: CMakeLists.txt  tinyusb_init.c
components/usb_audio/: CMakeLists.txt  usb_audio.c  usb_audio.h
components/usb_core/: CMakeLists.txt  README.md  usb_core.c  usb_core.h  usb_descriptors.c  usb_descriptors.h
components/usb_ncm/: CMakeLists.txt  usb_ncm.c  usb_ncm.h
include/: baudpunk_config.h  tusb_config.h
main/: CMakeLists.txt  baudpunk_banner.c  baudpunk_banner.h  idf_component.yml  main.c
